# min-sized-egui-wasm

./: .gitignore  Cargo.toml  README.md  index.html  min-sized-egui-bin-f2f0c98d95983bc4.js  min-sized-egui-bin-f2f0c98d95983bc4_bg.wasm  rust-toolchain
.cargo/: config.toml
.github/workflows/: pages.yml
src/: app.rs  main.rs
