[package]
name = "min-sized-egui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "min-sized-egui-bin"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [ "glow" ] } # you can see the default features here: https://github.com/emilk/egui/blob/master/crates/eframe/Cargo.toml#L34
egui = { version = "0.31", default-features = false }
env_logger = "0.11.8"
log = "0.4.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Performance",
    "Window"
  ] }




[features]


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.dev]
#opt-level = "s"
